--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,13 +1,17 @@
 .headerNav {
-  margin: 30px 0px 30px 0px;
+  width: 80%;
+  margin: 50px 0px 50px 0px;
 }
 
 .headerNav a {
   text-decoration: none;
   color: black;
   background-color: #ddd;
-  padding: 10px 30px;
+  padding: 15px 40px;
   border-radius: 4px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .headerNav a.active {
@@ -15,5 +19,5 @@
 }
 
 .headerNav a:first-child {
-  margin-right: 20px;
+  margin-right: 25px;
 }
