--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,7 +1,6 @@
 .productsSection {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: 	repeat(3, 1fr);
+  gap: 2rem;
+  max-width: 100%;
 }
